move to std net/http, refactor
