# openapi_spec/openapi-spec.yml
@@ -149,7 +149,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /users/posts:
+  /posts:
     post:
       tags:
         - Posts
@@ -214,7 +214,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /users/posts/{id}:
+  /posts/{id}:
     put:
       tags:
         - Posts
@@ -286,7 +286,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /users/posts/{id}/likes:
+  /posts/{id}/likes:
     post:
       tags:
         - Reactions
@@ -341,7 +341,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /users/own/feed:
+  /users/feed:
     get:
       tags:
         - Feed
@@ -408,7 +408,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /users/posts/{id}/comments:
+  /posts/{id}/comments:
     post:
       tags:
         - Comments
@@ -482,7 +482,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /users/posts/comments/{id}:
+  /comments/{id}:
     put:
       tags:
         - Comments
